base/redash-adhocworker-deployment.yaml
apiVersion: apps/v1beta2
kind: Deployment
metadata:
  name: redash-adhocworker
  labels:
    app.kubernetes.io/name: redash-adhocworker
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: redash-adhocworker
  template:
    metadata:
      labels:
        app.kubernetes.io/name: redash-adhocworker
    spec:
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      containers:
        - name: redash-adhocworker
          image: redash/redash
          imagePullPolicy: IfNotPresent
          command: ["/app/bin/docker-entrypoint"]
          args: ["scheduler"]
          ports:
            - name: "insights"
              containerPort: 5000
              protocol: TCP
          readinessProbe:
            exec:
             command:
             - pgrep
             - -f
             - worker
            initialDelaySeconds: 15
            timeoutSeconds: 5
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 3
          livenessProbe:
            exec:
             command:
             - pgrep
             - -f
             - worker
            initialDelaySeconds: 15
            timeoutSeconds: 1
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 3
          resources:
            requests:
              memory: "256Mi"
              cpu: "500m"
            limits:
              memory: "128Mi"
              cpu: "150m"
