base/redash-init.yaml
apiVersion: apps/v1beta2
kind: Pod
metadata:
  name: redash-init
spec:
  restartPolicy: Never
  terminationGracePeriodSeconds: 30
  containers:
    - name: redash
      image: redash/redash
      imagePullPolicy: IfNotPresent
      command: ["/app/bin/docker-entrypoint"]
      args: ["create_db"]
      resources: {}
