base/redash-web-deployment.yaml
apiVersion: apps/v1beta2
kind: Deployment
metadata:
  name: redash-web
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: redash-web
  template:
    metadata:
      labels:
        app.kubernetes.io/name: redash-web
    spec:
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      containers:
        - name: redash
          image: redash/redash
          imagePullPolicy: IfNotPresent
          command: ["/app/bin/docker-entrypoint"]
          args: ["server"]
          ports:
            - name: "redash"
              containerPort: 5000
              protocol: TCP
          readinessProbe:
            exec:
             command:
             - pgrep
             - -f
             - gunicorn
            initialDelaySeconds: 30
            timeoutSeconds: 5
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 3
          livenessProbe:
            exec:
             command:
             - pgrep
             - -f
             - gunicorn
            initialDelaySeconds: 30
            timeoutSeconds: 1
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 3
          resources: {}
