base/redash-worker-deployment.yaml
apiVersion: apps/v1beta2
kind: Deployment
metadata:
  name: redash-worker
  labels:
    app.kubernetes.io/name: redash-worker
spec:
  replicas: 3
  selector:
    matchLabels:
      app.kubernetes.io/name: redash-worker
  template:
    metadata:
      labels:
        app.kubernetes.io/name: redash-worker
    spec:
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      containers:
        - name: redash
          image: redash/redash
          imagePullPolicy: IfNotPresent
          command: ["/app/bin/docker-entrypoint"]
          args: ["scheduler"]
          ports:
            - name: "insights"
              containerPort: 5000
              protocol: TCP
          readinessProbe:
            exec:
             command:
             - pgrep
             - -f
             - worker
            initialDelaySeconds: 15
            timeoutSeconds: 5
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 3
          livenessProbe:
            exec:
             command:
             - pgrep
             - -f
             - worker
            initialDelaySeconds: 15
            timeoutSeconds: 1
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 3
          resources: {}
